--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>xhw</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>xhw</title>
+  <!-- 引入样式 -->
+<!-- <link rel="stylesheet" href="https://unpkg.com/mint-ui@1/lib/style.css"> -->
+<!-- 引入组件库 -->
+<!-- <script src="https://unpkg.com/mint-ui@1/lib/index.js"></script> -->
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+</style>
