更新数据和分类页

--- a/index.html
+++ b/index.html
@@ -22,4 +22,8 @@
     padding: 0;
     box-sizing: border-box;
   }
+  img[lazy=loading] {
+    background:url(./static/loding.gif) center center no-repeat;
+    background-size: 40% 40%;
+  }
 </style>
